# agent-flight-recorder

./: .env.example  .gitignore  README.md  pyproject.toml
src/flight_recorder/: __init__.py  cli.py  diff.py  models.py  report.py  runner.py  template.py  trace.py
tasks/: extract-emails.yaml  fix-median-bug.yaml  hello-world.yaml  semver-precedence.yaml
tests/: test_diff.py  test_models.py  test_report.py  test_trace.py
