[project]
name = "agent-flight-recorder"
version = "0.1.0"
description = "Eval/replay harness for AI agents: run agent tasks in isolated E2B sandboxes, record full traces, measure pass rate, flakiness and cost."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "e2b>=2.3.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
flightrec = "flight_recorder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_recorder"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
